
# the variable "SRCS" contains all .cpp files of this project
FILE(GLOB SRCS ${PROJECT_SOURCE_DIR}/*.cpp)

# check for requested collision detection wrappers
OPTION(Simox_COLLISION_CHECKER_PQP "Build and use the PQP Collision Detection library (located in ExternalDependencies)" ON)
IF (Simox_COLLISION_CHECKER_PQP)
	MESSAGE (STATUS " ** COLLISION DETECTION: PQP")
	SET (COL_CHECKER_WRAPPER_DIR ${PROJECT_SOURCE_DIR}/CollisionDetection/PQP)	
	SET(VR_COLLISION_DETECTION_PQP 1)
	SET(COLLISIONDETECTION_LIB ColCheckerPQP)
	SET(COLLISIONDETECTION_DIR ${COL_CHECKER_WRAPPER_DIR}/PQP++)
	SET(COLLISIONDETECTION_INC_DIR ${COLLISIONDETECTION_DIR})
	SET(COLLISIONDETECTION_LIB_DIR ${Simox_LIB_DIR})
	
	# create PQP lib
	ADD_SUBDIRECTORY(${COLLISIONDETECTION_DIR})
ELSE()
	# DUMMY
	MESSAGE (STATUS "WARNING: NO LIBRARY DEFINED FOR COLLISION DETECTION: COLLISION DETECTION IS DISABLED!")
	SET (COL_CHECKER_WRAPPER_DIR ${PROJECT_SOURCE_DIR}/CollisionDetection/Dummy)	
	SET(COLLISIONDETECTION_DIR ${Simox_DIR}/VirtualRobot/CollisionDetection/Dummy)
	SET(COLLISIONDETECTION_INC_DIR ${COLLISIONDETECTION_DIR})
	SET(COLLISIONDETECTION_LIB_DIR ${Simox_LIB_DIR})
ENDIF ()
MESSAGE (STATUS " ** Directory of collision detection wrapper: " ${COL_CHECKER_WRAPPER_DIR})

FILE (GLOB SRCS_COL ${COL_CHECKER_WRAPPER_DIR}/*.cpp)
FILE (GLOB INCS_COL ${COL_CHECKER_WRAPPER_DIR}/*.h)

SET (SOURCES ${SOURCES} ${SRCS_COL})
SET (INCLUDES ${INCLUDES} ${INCS_COL})

LINK_DIRECTORIES(${COLLISIONDETECTION_LIB_DIR})
INCLUDE_DIRECTORIES(${COL_CHECKER_WRAPPER_DIR} ${COLLISIONDETECTION_INC_DIR})

