IF(COMPILE_NAO_SECTIONS)
	LINK_DIRECTORIES(${RDKCORE_LINK_DIRECTORIES})
	SET(NAO_FILES
		naojoints.cpp
		rnaojoints.cpp
		rnaosensors.cpp
		)
	ADD_LIBRARY(rdknao SHARED ${NAO_FILES})
	INCLUDE_DIRECTORIES(${RDKCORE_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(rdknao ${RDKCORE_LIBRARIES})
ENDIF(COMPILE_NAO_SECTIONS)

