#MACRO(RAGENT_MODULE PARAM_FILE_LIST)
#  RDK_ADD_RAGENT_MODULE(${PARAM_FILE_LIST})
##  STRING(REGEX REPLACE ".*/([^/]*)$" "\\1" MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR})
##  SET(FILE_LIST ${PARAM_FILE_LIST})
##  IF("${FILE_LIST}" MATCHES "AUTO")
##    FILE(GLOB FILE_LIST "*.cpp")
##  ENDIF("${FILE_LIST}" MATCHES "AUTO")
##  SET(THIS_MODULE_NAME "rdkram_${MODULE_NAME}")
##  IF("$ENV{RDK_FORCE_REMOVE_OLD_TARGET}" STREQUAL "true")
##    RDK_ADD_FORCE_REMOVE_COMMAND(${THIS_MODULE_NAME})
##  ELSE("$ENV{RDK_FORCE_REMOVE_OLD_TARGET}" STREQUAL "true")
##    ADD_LIBRARY(${THIS_MODULE_NAME} SHARED ${FILE_LIST})
##  # not available yet, thus skipping this for now
##  #IF(NOT ${CMAKE_SYSTEM} MATCHES "CYGWIN")
##  #  INSTALL(TARGETS rdkram_${MODULE_NAME} LIBRARY DESTINATION ${LIBRARY_INSTALL_PATH})
##  #ELSE(NOT ${CMAKE_SYSTEM} MATCHES "CYGWIN")
##  #  INSTALL(TARGETS rdkram_${MODULE_NAME} RUNTIME DESTINATION ${LIBRARY_INSTALL_PATH})
##  #ENDIF(NOT ${CMAKE_SYSTEM} MATCHES "CYGWIN")
##    TARGET_LINK_LIBRARIES(${THIS_MODULE_NAME} rdkcore)
##    TARGET_LINK_LIBRARIES(${THIS_MODULE_NAME} ${LINK_LIBS})
##  ENDIF("$ENV{RDK_FORCE_REMOVE_OLD_TARGET}" STREQUAL "true")
#ENDMACRO(RAGENT_MODULE)

#INCLUDE_DIRECTORIES(${RDKCORE_INCLUDE_DIR})
#LINK_DIRECTORIES(${RDKCORE_LINK_DIRECTORIES})
#ADD_ALL_SUBDIRS()

RDK_ADD_ALL_SUBDIRECTORIES()

