IF(COMPILE_RCONSOLE)
	ADD_EXECUTABLE(rdk-remove-rqm rdk-remove-rqm.cpp)
	INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(rdk-remove-rqm rdkra_main ${RDKCORE_LIBRARIES} dl rdkrq_common)
	SET_TARGET_PROPERTIES(rdk-remove-rqm PROPERTIES COMPILE_FLAGS "${RDKCORE_CPPFLAGS} ${RDKCORE_CXXFLAGS}")
	SET_TARGET_PROPERTIES(rdk-remove-rqm PROPERTIES LINK_FLAGS ${RDKCORE_LDFLAGS})
	IF(NOT CYGWIN)
		INSTALL(PROGRAMS rdk-remove-rqm DESTINATION bin)
	ENDIF(NOT CYGWIN)
ENDIF(COMPILE_RCONSOLE)

